--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -138,7 +138,7 @@ body {
 }
 
 .story, .video-carousel {
-  background: url("../../images/brushsteel.jpg") no-repeat fixed center;
+  background: url("../../images/brushsteel.jpg") no-repeat center;
 }
 
 .scm .info {
@@ -147,6 +147,10 @@ body {
 
 .scm .info p {
   width: 50%;
+}
+
+.scm .moleculePattern {
+  width: 100%;
 }
 
 .story img {
@@ -168,27 +172,51 @@ body {
   box-shadow: 2px 4px 12px 2px #0c1b1b;
 }
 
+.story .chemical {
+  width: 30%;
+  padding: 2rem;
+}
+
 .molecules {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
-.molecules .drops {
+.molecules .title {
   width: 50%;
 }
 
-.molecules .chemical {
+.molecules .traits {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.molecules .traits .trait {
   width: 30%;
   padding: 2rem;
 }
 
-.molecules .dropper {
+.molecules .microscope {
   width: 30%;
-  margin-top: 90px;
 }
 
-.molecules .dropper img {
-  float: right;
+.molecules .drops {
+  width: 30%;
+}
+
+.video-carousel .video {
+  max-width: 1068px;
+  height: 300px;
+  margin: 0 auto;
+  background: url("../../images/scm-video.jpg");
+  background-repeat: no-repeat;
+  background-size: 80% 80%;
+}
+
+.video-carousel .carousel {
+  text-align: center;
 }
 
 .products {
@@ -198,6 +226,10 @@ body {
 .products .info {
   padding-top: 5rem;
   padding-left: 8.333333%;
+}
+
+.products .products-img {
+  width: 100%;
 }
 
 
