--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -151,16 +151,19 @@ body {
 }
 
 .scm .hero {
-  max-width: 100%;
-  max-height: 100%;
   margin-bottom: -4px;
 }
 
+.scm .hero img {
+  width: 992px;
+  max-width: none;
+}
+
 .scm .info {
-  margin-left: -280px;
+  margin-left: -450px;
   background: url("../../images/molecule-pattern.svg");
   background-repeat: no-repeat;
-  background-position: 104% 100%;
+  background-position: 100% 110%;
   background-size: 40% 40%;
 }
 
@@ -190,6 +193,8 @@ body {
 .science .supportImg .supportImg-r {
   width: 60%;
   float: right;
+  margin-left: 40px;
+  margin-top: 6px;
 }
 
 .science .chemicals {
@@ -198,7 +203,7 @@ body {
 
 .science .placard {
   text-align: center;
-  padding: 30px 70px;
+  padding: 30px 80px;
   margin: 50px auto;
   background-color: rgba(226, 251, 250, 0.15);
   border-top: 2px solid #3a8684;
@@ -219,6 +224,7 @@ body {
   margin: 0 auto 20px auto;
   text-align: center;
   color: #68bebc;
+  font-weight: 600;
 }
 
 .science .chemical {
@@ -238,8 +244,8 @@ body {
 }
 
 .story .microscope {
-  width: 30%;
-  margin: -180px 0;
+  width: 35%;
+  margin: -180px 0 -300px 0;
 }
 
 .story .traits {
@@ -265,13 +271,13 @@ body {
   border-bottom: 1px solid #424649;
 }
 
-.story .drops {
+.story .molecules {
   z-index: 1;
   width: 70%;
   padding-right: 8.333333%;
 }
 
-.video-carousel .video {
+.video-carousel .video-thumbnail {
   color: #ffffff;
   max-width: 1068px;
   max-height: 150px;
@@ -282,7 +288,7 @@ body {
   padding: 40px 80px;
 }
 
-.video-carousel .video i {
+.video-carousel .video-thumbnail i {
   padding-right: 20px;
   font-weight: 300;
 }
@@ -315,6 +321,7 @@ body {
 .products .info .cta {
   color: #68bebc;
   text-transform: uppercase;
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
