--- a/src/sass/custom/_scm.scss
+++ b/src/sass/custom/_scm.scss
@@ -5,10 +5,9 @@ $scmTeal: #68bebc;
   flex-direction: row;
   justify-content: space-between;
 }
-.science, .video-carousel {
+.science, .carousel {
   background:  url("../../images/brushsteel.jpg");
-  // background-repeat: no-repeat;
-  // background-position: center;
+  background-repeat: no-repeat;
   background-size: 100% 100%;
   width: 1280px;
 }
@@ -35,9 +34,7 @@ $scmTeal: #68bebc;
 .scm {
 
   .hero {
-    // max-width: 100%;
-    // max-height: 100%;
-    margin-bottom: -4px;
+    // margin-bottom: -4px;
 
     img {
       width: 992px;
@@ -45,7 +42,6 @@ $scmTeal: #68bebc;
     }
   }
   .info {
-    // width: 100%;
     margin-left: -450px;
     background:  url("../../images/molecule-pattern.svg"); background-repeat: no-repeat;
     background-position: 100% 110%;
@@ -62,9 +58,6 @@ $scmTeal: #68bebc;
       }
     }
   }
-  // .moleculePattern {
-  //   width: 100%;
-  // }
 }
 
 .science {
@@ -89,7 +82,6 @@ $scmTeal: #68bebc;
   .placard {
     text-align: center;
     padding: 30px 80px;
-    // width: 50%;
     margin: 50px auto;
     background-color: rgba(226, 251, 250, .15);
     border-top: 2px solid darken($scmTeal, 20%);
@@ -112,7 +104,6 @@ $scmTeal: #68bebc;
       font-weight: 600;
   }
   .chemical {
-    // width: 30%;
     padding: 0 60px;
     margin: 0 auto 20px auto;
     text-align: center;
@@ -129,7 +120,7 @@ $scmTeal: #68bebc;
   }
   .microscope {
     width: 35%;
-    margin: -180px 0 -300px 0;
+    margin: -180px 0 -250px 0;
   }
   .traits {
     width: 30%;
@@ -141,13 +132,11 @@ $scmTeal: #68bebc;
       color: $scmTeal;
     }
     .trait {
-      // width: 30%;
       padding: 24px 10px;
     }
     .dropsLine {
       height: 70px;
       width: 570px;
-      // margin-top: 20px;
       margin-left: 22%;
       border-left: 1px solid $gray700;
       border-bottom: 1px solid $gray700;
@@ -157,29 +146,55 @@ $scmTeal: #68bebc;
     z-index: 1;
     width: 70%;
     padding-right: 8.333333%;
-    // margin-top: 90px;
-    // img {
-    //   float: right;
-    // }
   }
 }
 .video-carousel {
   .video-thumbnail {
-    color: #ffffff;
     max-width: 1068px;
     max-height: 150px;
     margin: 0 auto;
-    background: url('../../images/scm-video.jpg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    padding: 40px 80px;
-    i {
-      padding-right: 20px;
-      font-weight: 300;
+    position: relative;
+
+    .video-text {
+      position: absolute;
+      top: 30px;
+      left: 60px;
+      img {
+        display: inline-block;
+        margin-right: 22px;
+      }
+      h4 {
+        display: inline-block;
+        vertical-align: middle;
+        color: #ffffff;
+      }
+    }
+    .video-button {
+      margin-right: 20px;
+      width: 34px;
+      height: 34px;
+      vertical-align: middle;
     }
   }
   .carousel {
+    margin-top: -75px;
+    padding: 100px 0;
     text-align: center;
+
+    .widget.block-products-list .add-button {
+      font-weight: 400;
+      // background: #00388D;
+      // border: 1px solid #00388D;
+      // color: #fff;
+      // padding: 10px 20px;
+      // margin-top: 20px;
+      //
+      // &:hover {
+      //   background: lighten(#00388D, 20%);
+      //   border: 1px solid #00388D;
+      //   color: #fff;
+      // }
+    }
   }
 }
 .products {
