--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -4,10 +4,16 @@ body {
   color: $baseFont-color;
   background: $viewportBackground-color;
 }
+.cms-page-view .column.main img {
+  margin: 0;
+}
+.columns .column.main {
+  padding-bottom: 0;
+}
 .content-wrapper {
   font-weight: 300;
   max-width: 1280px;
-  margin: 30px auto;
+  margin: 0 auto;
   line-height: 1.4;
   background: #fff;
 
@@ -37,6 +43,15 @@ body {
       border: 1px solid #00388D;
       color: #fff;
     }
+  }
+  .product-item-link {
+    text-transform: none;
+  }
+  .widget.block-products-list .product-item-name {
+     height: 52px;
+  }
+  .price-wrapper {
+    font-weight: 400;
   }
   h1 {
     font-size: 70px;
