--- a/src/sass/custom/_mediaqueries.scss
+++ b/src/sass/custom/_mediaqueries.scss
@@ -4,7 +4,7 @@
         font-size: 45px;
       }
       h2 {
-        font-size: 48px;
+        font-size: 45px;
       }
       h3 {
         font-size: 39px;
@@ -29,7 +29,7 @@
   }
   .scm {
     background-color: $gray700;
-    height: 650px;
+    // height: 650px;
 
     .hero {
       img {
@@ -43,6 +43,7 @@
         width: 100%;
         h1 {
           display: inline-block;
+          font-size: 36px;
         }
       }
     }
@@ -65,9 +66,12 @@
           line-height: 1.4;
           margin: 0;
         }
+        .scm-cta {
+          height: 30px;
+        }
         button {
-          // margin-top: 40px;
           padding: 10px 16px;
+          // height: 20px;
         }
       }
     }
@@ -78,28 +82,38 @@
     //   width: 100%;
     // }
     .supportImg-l {
-      width: 40%;
-      margin-left: -40px;
+      width: 30%;
+      height: 100px;
+      margin: 0;
+      margin-left: -20px;
       order: 2;
     }
     .placard {
-      margin: 50px 20px;
+      margin: 50px 10px -20px 10px;
+      padding: 10px;
+      width: auto;
+      height: auto;
+      max-width: 640px;
       order: 1;
     }
     .chemicals {
+      margin-top: 0;
+      padding: 0 10px;
+      width: 100%;
       order: 3;
+
       .chemical {
-        padding: 0 20px;
+        padding: 0;
       }
     }
     .supportImg-r {
       width: 100%;
-      // margin-left: 0;
-      // margin-right: -40px;
+      margin: -10px 0 0 0;
+      height: 44px;
       order: 4;
 
       img {
-        width: 25%;
+        width: 12%;
         float: right;
       }
     }
@@ -109,12 +123,12 @@
       width: 100%;
       text-align: center;
       padding-left: 0;
-      margin-top: -180px;
+      margin-top: 10px;
       order: 1;
 
       h2 {
-        width: 80%;
-        padding-left: 10%;
+        margin: 60px auto 20px auto;
+        padding: 0;
       }
     }
     .microscope {
@@ -122,6 +136,7 @@
     }
     .traits {
       text-align: center;
+      padding: 0;
       width: 100%;
       order: 3;
 
@@ -138,7 +153,14 @@
   .video-carousel {
     .video-thumbnail {
       .video-text {
-        top: 6px;
+        top: 0;
+        left: 0;
+        font-size: 38px;
+
+        img {
+          margin-right: 6px;
+          margin-left: 10px;
+        }
       }
     }
   } // video-carousel
@@ -147,7 +169,12 @@
 
     .info {
       width: 100%;
+      padding: 0;
       text-align: center;
+
+      h2 {
+        margin-top: 0;
+      }
 
       .productsLine {
         margin: 0 auto 2rem auto;
